--- a/BootloaderFileGenerator/BootloaderFileGenerator/BootloaderFileGenerator.csproj
+++ b/BootloaderFileGenerator/BootloaderFileGenerator/BootloaderFileGenerator.csproj
@@ -11,6 +11,10 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommandLineParser" Version="2.8.0" />
+    </ItemGroup>
+
    
 
 </Project>
