--- a/BootloaderFileGenerator/BootloaderFileGenerator/BootloaderFileGenerator.csproj
+++ b/BootloaderFileGenerator/BootloaderFileGenerator/BootloaderFileGenerator.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
+      <PackageReference Include="Crc32.NET" Version="1.2.0" />
     </ItemGroup>
 
    
