--- a/BootloaderModifier/BootloaderModifier/BootloaderModifier.csproj
+++ b/BootloaderModifier/BootloaderModifier/BootloaderModifier.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="CommandLineParser" Version="2.8.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\BootloaderFileFormat\BootloaderFileFormat\BootloaderFileFormat.csproj" />
+    </ItemGroup>
+
 </Project>
