--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 ### PyCharm+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Debug, Release
+code-transmition/Release
+code-transmition/Debug
+upload-test-program/Debug
 
 # User-specific stuff
 .idea/**/workspace.xml
